--- a/hooks/src/App.css
+++ b/hooks/src/App.css
@@ -1,1 +1,8 @@
-
+.mainContainer {
+    text-align: center;
+    align-items: center;
+    justify-content: space-around;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+}
